--- a/views/tutormode/tutormode.hbs
+++ b/views/tutormode/tutormode.hbs
@@ -2,10 +2,6 @@
     @import url(/stylesheets/tutormode.css);
 </style>
 
-<style>
-    @import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);
-</style>
-
 <!-- header section starts  -->
 
 
@@ -20,10 +16,6 @@
             <br>
         </h3>
         <h3 class="wrapper-mode">
-            <a href="/tutor/changePassword"><i class="ri-arrow-right-s-fill"></i>Change Password</a>
-            <br>
-        </h3>
-        <h3 class="wrapper-mode">
             <a href="/tutor/create"><i class="ri-arrow-right-s-fill"></i>Create course</a>
             <br>
         </h3>
@@ -33,6 +25,10 @@
         </h3>
         <h3 class="wrapper-mode">
             <a href="/tutor/stored/courses"><i class="ri-arrow-right-s-fill"></i>View Courses</a>
+            <br>
+        </h3>
+         <h3 class="wrapper-mode">
+            <a href="/tutor/changePassword"><i class="ri-arrow-right-s-fill"></i>Update PassWord</a>
             <br>
         </h3>
         <div class="wrapper-left">
