--- a/views/user/contactToTutor.hbs
+++ b/views/user/contactToTutor.hbs
@@ -120,8 +120,7 @@
                 </div>
                 <div class="col-12  ">
                     <label for="message" class="form-label"></label>
-                    <textarea type="text" rows="3" class="form-control" id="message" placeholder="message to tutor">
-                    </textarea>
+                    <textarea type="text" rows="3" class="form-control" id="message" placeholder="message to tutor"></textarea>
 
                 </div>
 
