--- a/views/user/courses.hbs
+++ b/views/user/courses.hbs
@@ -31,7 +31,7 @@
                                         <li class="dotgrid row">
                                             <div class="grouping wrapper col-9">
                                                 <div class="variants">
-                                                    <h4 class="dot-title"><a onclick="loadDetail('{{this.courseId._id}}')" >{{this.courseId.name}}</a></h4>
+                                                    <h4 class="dot-title"><a href="">{{this.courseId.name}}</a></h4>
                                                     <div class="price grey-color">
                                                         <span>Price: {{this.courseId.price}} VNĐ</span>
                                                     </div>
@@ -42,16 +42,12 @@
                                                         <span>{{this.status}}</span>
                                                     </div>
                                                 </div>
-                                                <button onclick="loadDetail('{{this.courseId._id}}')">View Details</button>
                                             </div>
 
-                                            {{!-- <div class="choose col-3">
-                                                <button class="deny"
-                                                    onclick="deleteCourse('{{this._id}}')">Delete</button>
-                                                <button class="edit" onclick="editCourse('{{this._id}}')">Edit </button>
-                                                <button class="clone"
-                                                    onclick="cloneCourse('{{this._id}}')">Clone</button>
-                                            </div> --}}
+                                            <div class="choose col-3">
+                                                
+                                                  <button class="texting" onclick="texTing('{{this._id}}')">Texting</button>
+                                            </div>
                                         </li>
                                         {{/each}}
                                     </ul>
@@ -176,6 +172,10 @@
                             <span>${Order.status}</span>
                         </div>
                     </div>
+                      <div class="choose col-3">
+                                                
+                                                  <button class="texting" onclick="texTing('${Order._id}')">Texting</button>
+                                            </div>
                 </div>
 
                
@@ -192,9 +192,8 @@
         }
     }
 
-    function loadDetail(id) {
-        window.location.href = `/{{layout}}/courses/${id}`
+     // texting
+    function texTing(idOrder) {
+        window.location.href = `/user/texting/${idOrder}`
     }
-
-
 </script>
