--- a/views/user/studentWaittingList.hbs
+++ b/views/user/studentWaittingList.hbs
@@ -275,8 +275,8 @@
             `;
                 listWaiting.appendChild(tempStudent);
             });
-            console.log()
-            console.log('haha1111')
+           
+            console.log(currentPage)
 
             pagination.innerHTML = generateTutorPaginationLinks(data.pages, data.currentPage, data.prevPage, data.nextPage, data.namePage);
 
