--- a/views/admin/detailTutor.hbs
+++ b/views/admin/detailTutor.hbs
@@ -26,18 +26,23 @@
 
     <div class="page-view-detail-account">
         <div class="main--content">
-            {{!-- <div class="header--wrapper">
+            <div class="header--wrapper">
                 <div class="header--title">
                     <span>Primary</span>
-                    <h2>Information Form User</h2>
+                    <h2>information Form User</h2>
                 </div>
                 <div class="user--infor">
                     <div class="search--box">
                         <i class="fa-solid fa-search"></i>
                         <input type="text" placeholder="Search detail account">
                     </div>
+
+
                 </div>
-            </div> --}}
+
+
+
+            </div>
             <div class="information-account-container">
                 <h3 class="main--title">User information</h3>
                 <div class="profile-account">
@@ -58,6 +63,8 @@
                             <i class="fa-solid fa-graduation-cap"></i>
                             <span>{{tutor.tutorId.school}}</span>
                         </div>
+
+
 
                     </div>
                     <div class="information-expenditure-account">
