--- a/views/auth/updatePassword.hbs
+++ b/views/auth/updatePassword.hbs
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="/assets/changePassword.css">
+    <link rel="stylesheet" href="/error.css">
+
     <link rel="stylesheet" href="/assets/fonts/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -34,29 +36,37 @@
                         </div>
 
                         <form class="modal-content" action="" method="POST">
-
-                            <div class="input">
-                                <i class="ti-lock"></i>
-                                <div class="input-data">
-                                    <input type="password" class="input-password" id="input-old-password"
-                                        placeholder="Old Password" name="oldPassword">
+                            <div class="wrapper-input">
+                                <div class="input">
+                                    <i class="ti-lock"></i>
+                                    <div class="input-data">
+                                        <input type="password" class="input-password" id="input-old-password"
+                                            placeholder="Old Password" name="oldPassword">
+                                    </div>
                                 </div>
+                                <div class="error"> error</div>
                             </div>
-                            <div class="input">
-                                <i class="ti-lock"></i>
-                                <div class="input-data">
-                                    <input type="password" class="input-password" id="input-new-password"
-                                        name="newPassword" placeholder="New Password">
+                            <div class="wrapper-input">
+                                <div class="input">
+                                    <i class="ti-lock"></i>
+                                    <div class="input-data">
+                                        <input type="password" class="input-password" id="input-new-password"
+                                            name="newPassword" placeholder="New Password">
+                                    </div>
                                 </div>
+                                <div class="error"> error</div>
                             </div>
-                            <div class="input">
-                                <i class="ti-lock"></i>
-                                <div class="input-data">
-                                    <input type="password" class="input-confirm-password" id="input-confirm-password"
-                                        name="confirmPassword" placeholder="Confirm Password">
+                            <div class="wrapper-input">
+                                <div class="input">
+                                    <i class="ti-lock"></i>
+                                    <div class="input-data">
+                                        <input type="password" class="input-confirm-password"
+                                            id="input-confirm-password" name="confirmPassword"
+                                            placeholder="Confirm Password">
+                                    </div>
                                 </div>
+                                <div class="error"> error</div>
                             </div>
-
 
                         </form>
                         <div class="clearfix">
@@ -153,7 +163,8 @@
 
     </div>
     <script>
-
+        const $ = document.querySelector.bind(document);
+        const $$ = document.querySelectorAll.bind(document);
         async function resetPassword() {
             try {
                 let oldPassword = document.getElementById('input-old-password').value;
@@ -161,39 +172,74 @@
                 let confirmPassword = document.getElementById('input-confirm-password').value;
 
                 const curUrl = new URL(window.location.href);
+                let isError = false;
+                // Collect data from the form
+                const formData = {
+                    'oldPassword': oldPassword,
+                    'newPassword': newPassword,
+                    'confirmPassword': confirmPassword,
+                };
 
+                console.log(formData);
 
-                const response = await fetch('{{layout}}/changePassword', {
+                fetch('/{{layout}}/changePassword', {
                     method: 'POST',
+                    body: JSON.stringify(formData),
                     headers: {
-                        'Content-Type': 'application/json',
+                        'Content-type': 'application/json; charset=UTF-8',
                     },
-                    body: JSON.stringify({ oldPassword, newPassword, confirmPassword }),
-                });
+                }).then(response => {
+                    if (!response.ok) {
+                        isError = true;
+                        // Handle errors here, e.g., display an error message
+                    }
+                    // If password reset was successful, redirect to the signin page
+                    return response.json();
+                })
+                    .then(data => {
+                        if (isError == true) {
+                            const errorElements = $$('.error');
+                            console.log(data.errors)
+                            errorElements.forEach(errorElement => {
+                                errorElement.classList.remove('active');
+                            });
+                            errorElements.forEach(errorElement => {
+                                const fieldName = errorElement.previousElementSibling.lastElementChild.lastElementChild.getAttribute('name');
+                                console.log(fieldName)
+                                if (data.errors.some(error => error.path === fieldName)) {
+                                    errorElement.classList.add('active');
+                                    const matchingError = data.errors.find(error => error.path === fieldName);
+                                    errorElement.innerHTML = matchingError.msg;
+                                }
+                            });
+                        } else {
+                            const errorElements = $$('.error');
+                            errorElements.forEach(errorElement => {
+                                errorElement.classList.remove('active');
+                                errorElement.innerHTML = '';
+                            });
+                            const alertReview = $('.alert-success')
+                            alertReview.innerHTML = `${data.msg}`;
+                            alertReview.style.opacity = "1";
+                            alertReview.style.display = "block"
+                            console.log(alertReview)
+                            console.log(data.msg)
+                            console.log(data)
+                            setTimeout(function () {
+                                alertReview.style.opacity = "0";
+                                setTimeout(function () {
+                                    alertReview.style.display = "none";
+                                }, 500);
+                            }, 3000);
+                        }
 
-                // Clear input fields regardless of the response status
-                console.log(response);
-                if (!response.ok) {
-                    throw new Error('Login failed');
-                }
+                    })
 
-
-                // Check if the response indicates a successful login and a redirection
-                if (response.ok && response.redirected) {
-                    window.location.href = response.url;
-                    return;
-                }
-
-                // Optional: You can handle the data returned from the server if needed
-                const data = await response.json();
-                console.log(data);
 
             } catch (error) {
-                // Handle login error, e.g., display an error message
-                alert("Login failed");
-                console.error('Login failed', error);
+                console.error('Error:', error);
             }
-        }
+        };
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
