--- a/views/catalog/category.hbs
+++ b/views/catalog/category.hbs
@@ -1,25 +1,20 @@
 <style>
     @import url(/stylesheets/category.css);
 </style>
-<style>
-    @import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);
-</style>
+<style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);</style>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css);</style>
 <script type="module" src="/javascripts/swiper-bundle.min.js"></script>
 <script type="module" src="/javascripts/script.js"></script>
-<style>
-    @import url(https://fonts.cdnfonts.com/css/prata-2);
+<style type="stylesheets">@import url(https://fonts.cdnfonts.com/css/prata-2);</style>
+<style type="stylesheets">
+    @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);</style>
+<style type="stylesheets">@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css);
 </style>
-<style>
-    @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);
-</style>
-<style>
-    @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css);
-</style>
-<style>
-    @import url(https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css);
-</style>
+<style type="stylesheets">
+    @import url(https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css);</style>
+
+
 
 <div id="page" class="page-category">
     <main>
@@ -174,10 +169,10 @@
                                     <div class="col-8 col-xl-2 col-lg-2 col-sm-8 wrapper-sort-course">
                                         <select class="form-select" id="sort_selection" aria-label="Sort Course">
                                             <option selected>Sort accounts</option>
-                                            <option value="name-asc">Name courses: A-Z</option>
-                                            <option value="name-desc">Name course: Z-A</option>
-                                            <option value="tutor-asc">Tutor: A-Z</option>
-                                            <option value="tutor-desc">Tutor: Z-A</option>
+                                            <option value="name-asc">Name course, Alphabetically, A-Z</option>
+                                            <option value="name-desc">Name course, Alphabetically, Z-A</option>
+                                            <option value="tutor-asc">Tutor, Alphabetically, A-Z</option>
+                                            <option value="tutor-desc">Tutor, Alphabetically, Z-A</option>
                                             <option value="price-desc">Price, High to Low</option>
                                             <option value="price-asc">Price, Low to High</option>
                                         </select>
@@ -189,21 +184,23 @@
                                     <div class="dotgrid">
                                         <div class="wrapper">
                                             {{#each courses}}
-                                            <div class="item">
+                                            <div onclick="loadDetail( '{{this._id}}')" class="item">
                                                 <div class="dot-image">
-                                                    <a onclick="loadDetail( '{{this._id}}')"
+                                                    <a 
                                                         class="product-permalink"></a>
                                                     <div class="thumbnail">
                                                         <img src="/images/{{this.tutor.avatar}}" alt="">
                                                     </div>
+                                                     <div class="star"><span>{{ round this.average}}   </span>
+                                                     <div class="star-"></div>
+                                                     </div>
                                                     <div class="label"><span>-{{percent this.discount
                                                             this.price}}%</span></div>
                                                 </div>
                                                 <div class="dot-info">
 
-                                                    <h2 class="dot-title"><a href="">Môn học: {{this.name}}</a>
-                                                        <h2 class="dot-title"><a href="">Tên giảng viên:
-                                                                {{this.tutor.fullname}}</a>
+                                                    <h2 class="dot-title"><a href="">{{this.name}}</a>
+                                                        <h2 class="dot-title"><a href="">{{this.tutor.fullname}}</a>
 
                                                         </h2>
                                                         <i class="ri-star-fill"></i>
@@ -213,8 +210,8 @@
                                                         <i class="ri-star-fill"></i>
 
                                                         <div class="product-price">
-                                                            <p class="before"> {{this.price}}VNĐ</p>
-                                                            <p class="current">{{this.discount}}VNĐ</p>
+                                                            <span class="before"> {{this.price}}</span>
+                                                            <span class="current">{{this.discount}}</span>
                                                         </div>
                                                 </div>
                                             </div>
@@ -228,11 +225,15 @@
                             <div class="pagination">
                                 {{generatePaginationLinks pages currentPage prevPage nextPage role}}
                             </div>
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+
+
     </main>
 </div>
 <script src="./js/script.js"></script>
