--- a/views/tutormode/createcourse.hbs
+++ b/views/tutormode/createcourse.hbs
@@ -1,8 +1,6 @@
 <style>
     @import url(/stylesheets/createcourse.css);
-</style>
-<style>
-    @import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);
+    @import url(/error.css);
 </style>
 <!-- header section starts  -->
 
@@ -19,16 +17,18 @@
 
         </h3>
         <form action="">
+
             <p class="wrapper-input">
                 <label for="subject">Course Name:</label>
                 <input type="" id="subject" name="subject" placeholder="Enter your course" check required>
-            </p>
 
+            </p>
+            <div class="error"> error</div>
             <p class="wrapper-input">
                 <label for="schedule">Schedule:</label>
                 <input type="" id="schedule" name="schedule" placeholder="Enter your schedule" check required>
             </p>
-
+            <div class="error"> error</div>
             <p class="wrapper-input">
                 <label for="faculty">Faculty:</label>
                 <select name="faculty" id="faculty" check>
@@ -44,7 +44,7 @@
                     <option value="Điện tử Viễn thông">Điện tử Viễn thông</option>
                 </select>
             </p>
-
+            <div class="error"> error</div>
             <p class="wrapper-input">
                 <label for="school">Student Course:</label>
                 <select name="school" id="school" check>
@@ -56,25 +56,22 @@
                     <option value="K23">K23</option>
                 </select>
             </p>
-
+            <div class="error"> error</div>
             <p class="wrapper-input">
                 <label for="price">Price:</label>
                 <input type="text" id="price" name="price" placeholder="Enter your price/ Week" check required>
             </p>
-
-            <p class="wrapper-input">
-                <label for="discount">Price:</label>
-                <input type="text" id="discount" name="discount" placeholder="Enter after discount" check required>
-            </p>
-
+            <div class="error"> error</div>
             <p class="wrapper-input">
                 <label for="description">Description:</label>
                 <input type="text" id="description" name="description" placeholder="Enter your description about course"
                     check required>
             </p>
+            <div class="error"> error</div>
             <p class="wrapper-input">
                 <button class="btn" id="btn-submit" type="submit">Create Course</button>
             </p>
+
         </form>
     </div>
     <div class="image">
@@ -120,14 +117,18 @@
 
         const curUrl = new URL(window.location.href);
         let isError = false;
+
+
+
+
         const formData = {
             'name': $('#subject').value,
             'schedule': $('#schedule').value,
             'faculty': $('#faculty').value,
             'studentCourse': $('#school').value,
             'price': $('#price').value,
-            'discount': $('#discount').value,
             'description': $('#description').value,
+
         };
         console.log(formData);
         console.log($('#price').value);
@@ -147,15 +148,33 @@
         })
             .then(data => {
                 if (isError == true) {
-                    alert(data.error)
+                    const errorElements = $$('.error');
+
+                    errorElements.forEach(errorElement => {
+                        errorElement.classList.remove('active');
+                    });
+                    errorElements.forEach(errorElement => {
+                        const fieldName = errorElement.previousElementSibling.lastElementChild.getAttribute('name');
+                        console.log(fieldName)
+                        if (data.errors.some(error => error.path === fieldName)) {
+                            errorElement.classList.add('active');
+                            const matchingError = data.errors.find(error => error.path === fieldName);
+                            errorElement.innerHTML = matchingError.msg;
+                        }
+                    });
                 } else {
-
-
+                    const errorElements = $$('.error');
+                    errorElements.forEach(errorElement => {
+                        errorElement.classList.remove('active');
+                        errorElement.innerHTML = '';
+                    });
+                    
                     const alertReview = $('.alert-success')
                     alertReview.innerHTML = `${data.msg}`
                     alertReview.style.opacity = "1";
                     alertReview.style.display = "block"
-                    console.log(alertReview)
+                    console.log(data)
+                    console.log(data.msg)
                     setTimeout(function () {
                         alertReview.style.opacity = "0";
                         setTimeout(function () {
