--- a/views/user/editprofile.hbs
+++ b/views/user/editprofile.hbs
@@ -78,6 +78,52 @@
 </section>
 
 <!--body section ends -->
+<!-- footer section starts  -->
+
+<section class="footer">
+
+    <div class="box-container">
+
+        <div class="box">
+            <h3>quick links</h3>
+            <a class="link" href="#home"> <i class="fas fa-angle-right"></i> Home</a>
+            <a class="link" href="#about"> <i class="fas fa-angle-right"></i> About</a>
+            <a class="link" href="./category.hbs"> <i class="fas fa-angle-right"></i>Tutor</a>
+            <a class="link" href="#services"> <i class="fas fa-angle-right"></i>News & Blog</a>
+            <a class="link" href="#contact"> <i class="fas fa-angle-right"></i> Contact</a>
+            <a class="link" href="#"> <i class="fas fa-angle-right"></i> Login</a>
+        </div>
+
+        <div class="box">
+            <h3>contact info</h3>
+            <a href="#" class="link"> <i class="fas fa-phone"></i>0942607590</a>
+            <a href="#" class="link"> <i class="fas fa-phone"></i>0942492722</a>
+            <a href="#" class="link"> <i class="fas fa-envelope"></i> lynhathao.it@gmail.com </a>
+            <a href="#" class="link"> <i class="fas fa-map"></i>227 Nguyễn Văn Cừ, District 5, HCMC</a>
+        </div>
+
+        <div class="box">
+            <h3>Subscribe</h3>
+            <p>Join Our Mailing List & to get our news.</p>
+            <form action="">
+                <input type="email" name="" placeholder="enter your email address" id="" class="email">
+                <input type="submit" value="subscribe" class="btn">
+            </form>
+            <div class="share">
+                <a href="https://www.facebook.com/LNH.1105" class="fab fa-facebook-f"></a>
+                <a href="#" class="fab fa-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="credit"> © Created by <span>TUS Team</span> | all rights reserved! </div>
+
+</section>
+
+<!-- footer section ends -->
 
 <script>
     const $ = document.querySelector.bind(document)
@@ -139,7 +185,7 @@
             formData.append('avatar', inputFile.files[0]);
         } else {
             console.log(profilePic)
-
+         
         }
 
 
