--- a/views/user/formbetutor.hbs
+++ b/views/user/formbetutor.hbs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assetsFromToBeTutor/style.css">
+    <link rel="stylesheet" href="/error.css">
     <!-- <link rel="stylesheet" href="assets\card.css"> -->
 
 
@@ -14,7 +15,7 @@
 </head>
 
 <body>
-    
+
     <div class="alert alert-success  text-center align-items-center">
         You changed password successly
     </div>
@@ -96,36 +97,45 @@
             <form class="row g-3 needs-validation" novalidate enctype="multipart/form-data">
                 <div class="col-md-6">
                     <label for="your-name" class="form-label"></label>
-                    <input type="text" class="form-control" id="your-name" placeholder="Your Name" required>
+                    <input type="text" class="form-control" name="fullname" id="your-name" placeholder="Your Name"
+                        required>
                     <!-- <div class="valid-feedback">
                         Looks good!
                     </div> -->
+                    <div class="error"> error</div>
                 </div>
                 <div class="col-md-6">
                     <label for="email-address" class="form-label"></label>
-                    <input type="text" class="form-control" id="email-address" placeholder="Email Address" required>
+                    <input type="text" class="form-control" name="email" id="email-address" placeholder="Email Address"
+                        required>
+                    <div class="error"> error</div>
                     <!-- <div class="valid-feedback">
                         Looks good!
                     </div> -->
                 </div>
                 <div class="col-md-6 ">
                     <label for="phone-number" class="form-label"></label>
-                    <input type="tel" class="form-control" id="phone-number" placeholder="Phone Number" required>
+                    <input type="tel" class="form-control" name="phoneNumber" id="phone-number"
+                        placeholder="Phone Number" required>
                     <!-- <div class="valid-feedback">
                         Looks good!
                     </div> -->
+                    <div class="error"> error</div>
                 </div>
                 <div class="col-md-6">
+
                     <div class="row wrapper-gpa">
                         <div class="col-md-6 wrapper-text-gpa">
                             <label for="gpa" class="form-label"></label>
-                            <input type="text" class="form-control" id="gpa" name="gpa"
+                            <input type="text" class="form-control" id="gpa" name="GPA"
                                 aria-describedby="inputGroupFileAddon04" aria-label="Upload" placeholder="GPA">
+                            <div class="error"> error</div>
                         </div>
                         <div class="col-md-6 wrapper-file-gpa">
                             <label for="file-gpa" class="form-label"></label>
-                            <input type="file" class="form-control" id="file-gpa" name="gpaFile"
+                            <input type="file" class="form-control" id="file-gpa" name="GPAfile"
                                 aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+                            <div class="error"> error</div>
                         </div>
                     </div>
 
@@ -133,10 +143,10 @@
                 </div>
                 <div class="col-md-12  ">
                     <label for="message" class="form-label"></label>
-                    <textarea type="text" rows="4" cols="50" class="form-control" id="message" placeholder="message">
-                    </textarea>
+                    <textarea type="text" name="comment" rows="4" cols="50" class="form-control" id="message" placeholder="message"></textarea>
                     <!-- <div class="valid-feedback">
                         Looks good!-->
+                    <div class="error"> error</div>
                 </div>
 
 
@@ -159,6 +169,7 @@
         let number = parts[parts.length - 1];
 
         requestToTutor.addEventListener("click", async function (event) {
+
             event.preventDefault(); // Ngăn chặn hành vi gửi form tự động
 
             // Tạo đối tượng FormData từ form
@@ -167,7 +178,13 @@
             formData.append('phoneNumber', $('#phone-number').value);
             formData.append('GPA', $('#gpa').value);
             formData.append('comment', $('#message').value);
+            formData.append('email', $('#email-address').value);
 
+            for (let pair of formData.entries()) {
+                console.log(pair[0] + ', ' + pair[1]);
+            }
+
+            console.log($('#message').value)
             // Thêm file vào FormData
             const fileInput = document.querySelector('#file-gpa');
             if (fileInput.files[0]) {
@@ -184,27 +201,27 @@
                 });
 
                 if (!response.ok) {
-                    throw new Error(`HTTP error! Status: ${response.status}`);
+                    isError = true;
                 }
 
                 const data = await response.json();
-                
-                if (data.error) {
-                    const alertError = document.querySelector('.alert-danger');
-                    const errorMessages = data.errors.map(error => error.msg).join(', ');
 
-                    // Display or handle the error messages
-                    console.error('Error:', errorMessages);
-                    alertError.innerHTML = `${errorMessages}`
+                if (isError == true) {
+                    const errorElements = $$('.error');
+                    console.log(errorElements)
+                    errorElements.forEach(errorElement => {
+                        errorElement.classList.remove('active');
+                    });
 
-                    alertError.style.opacity = "1";
-                    alertError.style.display = "block";
-                    setTimeout(function () {
-                        alertError.style.opacity = "0";
-                        setTimeout(function () {
-                            alertError.style.display = "none";
-                        }, 500);
-                    }, 3000);
+                    errorElements.forEach(errorElement => {
+                        const fieldName = errorElement.previousElementSibling.getAttribute('name');
+                        console.log(fieldName)
+                        if (data.errors.some(error => error.path === fieldName)) {
+                            errorElement.classList.add('active');
+                            const matchingError = data.errors.find(error => error.path === fieldName);
+                            errorElement.innerHTML = matchingError.msg;
+                        }
+                    });
                 } else {
                     // Xử lý phản hồi thành công ở đây
                     const alertReview = $('.alert-success')
