--- a/views/user/signuptotutor.hbs
+++ b/views/user/signuptotutor.hbs
@@ -162,6 +162,7 @@
             </div>
 
         </div>
+        
     </div>
 
     <script>
@@ -212,7 +213,8 @@
 
     </div>
 
-
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/javascripts/chat.js"></script>
 
 
 
