--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -286,7 +286,7 @@
 
 <!-- contact section starts  -->
 
-<section class="contact" id="contact">
+{{!-- <section class="contact" id="contact">
 
     <h1 class="heading"> <span>contact</span> us </h1>
 
@@ -312,7 +312,7 @@
 
     </div>
 
-</section>
+</section> --}}
 
 <!-- contact section ends -->
 
