--- a/views/home/tutorhome.hbs
+++ b/views/home/tutorhome.hbs
@@ -232,7 +232,7 @@
 
 <!-- contact section starts  -->
 
-<section class="contact" id="contact">
+{{!-- <section class="contact" id="contact">
 
     <h1 class="heading"> <span>contact</span> us </h1>
 
@@ -258,7 +258,7 @@
 
     </div>
 
-</section>
+</section> --}}
 
 <!-- contact section ends -->
 
