--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -16,24 +16,23 @@
         <div class="box">
             <h3>contact info</h3>
             <a href="#" class="link"> <i class="fas fa-phone"></i>0942492722</a>
-            <a href="#" class="link"> <i class="fas fa-envelope"></i> lynhathao.it@gmail.com </a>
+            <a href="#" class="link"> <i class="fas fa-envelope"></i> TUS.it@gmail.com </a>
             <a href="#" class="link"> <i class="fas fa-map"></i>227 Nguyễn Văn Cừ, District 5, HCMC</a>
         </div>
 
-        {{!-- <div class="box">
+        <div class="box">
             <h3>Subscribe</h3>
             <p>Join Our Mailing List & to get our news.</p>
-            <form action="">
+            {{!-- <form action="">
                 <input type="email" name="" placeholder="enter your email address" id="" class="email">
                 <input type="submit" value="subscribe" class="btn">
-            </form>
+            </form> --}}
             <div class="share">
-                <a href="https://www.facebook.com/LNH.1105" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-linkedin"></a>
+                <a href="https://www.facebook.com/bach0807/" class="fab fa-facebook-f"></a>
+                <a href="https://instagram.com/nauxbachh/" class="fab fa-instagram"></a>
+
             </div>
-        </div> --}}
+        </div>
 
     </div>
 
