--- a/views/partials/headerAdmin.hbs
+++ b/views/partials/headerAdmin.hbs
@@ -14,7 +14,8 @@
     <nav class="navbar">
 
         <a href="/admin" class="logo">
-            <svg width="77" height="78" viewBox="0 0 77 78" fill="none" xmlns="http://www.w3.org/2000/svg"
+            {{> logo}}
+            {{!-- <svg width="77" height="78" viewBox="0 0 77 78" fill="none" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g filter="url(#filter0_d_1_391)">
                     <rect x="4" width="69" height="70" rx="20" fill="url(#pattern0)" shape-rendering="crispEdges" />
@@ -34,15 +35,13 @@
                     </filter>
                     <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
                         <use xlink:href="#image0_1_391" transform="matrix(0.0049975 0 0 0.00492611 -0.0397301 0)" />
-                    </pattern>
-                    {{> logo}}
+                    </pattern> --}}
                     <div class="links">
-                        <a href="/admin" class="btn">Home</a>
+                        {{!-- <a href="/admin" class="btn">Home</a> --}}
                         <a href="/admin/profile" class="btn">Admin Profile</a>
                         <a href="/admin/courses" class="btn">Courses</a>
                         <a href="/admin/account" class="btn">Account</a>
                         <a href="/admin/waitingTutor" class="btn">Tutor Wait List</a>
-                        {{!-- <a href="/admin/tutor-mode" class="btn">Tutor Mode</a> --}}
                         <a href="/logout" class="btn">Logout</a>
                     </div>
 
