--- a/views/partials/headerGuest.hbs
+++ b/views/partials/headerGuest.hbs
@@ -2,15 +2,13 @@
 
     <div class="contact-info">
         <p> <i class="fas fa-map-marker-alt"></i>227 Nguyễn Văn Cừ, District 5, HCMC</p>
-        <p> <i class="fas fa-envelope"></i>lynhathao.it@gmail.com</p>
+        <p> <i class="fas fa-envelope"></i>TUS.it@gmail.com</p>
         <p> <i class="fas fa-clock"></i>24/7
             <a href="https://instagram.com/nauxbachh/"><i class="fab fa-instagram"></i></a>
             <a href="https://www.facebook.com/bach0807/"><i class="fab fa-facebook"></i></a>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-pinterest"></i>
+            <a href="https://github.com/PUPMKINN/MyShopping"><i class="fab fa-github"></i></a>
             </i>
         </p>
-
     </div>
 
 
@@ -22,8 +20,8 @@
                 <a href="/">Home</a>
                 <a href="/site/aboutUs">About Us</a>
                 <a href="/courses">Tutor</a>
-                
-                
+
+
                 <a href="/login" class="btn">Become A Tutor</a>
                 <a href="/login">Login</a>
             </div>
